feat: Set ktlint version catalog

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ kotlin-version = "2.1.10"
 spring-boot-version = "3.4.3"
 spring-dependencies-version = "1.1.7"
 ktlint-gradle-version = "12.1.2"
+ktlint-version = "1.5.0"
 bucket4j-version = "8.10.1"
 jose4j-version = "0.9.6"
 kotlin-logging-jvm-version = "7.0.4"
